// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`horizontal should render 1 children 1`] = `
<DocumentFragment>
  <div
    style="overflow: auto hidden; contain: strict; width: 100%; height: 100%; padding: 0px; margin: 0px;"
  >
    <div
      style="position: relative; width: 100px; height: 100%; overflow: hidden; pointer-events: auto;"
    >
      <div
        style="margin: 0px; padding: 0px; position: absolute; height: 100%; top: 0px; left: 0px; display: flex;"
      >
        <div>
          0
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`horizontal should render 5 children 1`] = `
<DocumentFragment>
  <div
    style="overflow: auto hidden; contain: strict; width: 100%; height: 100%; padding: 0px; margin: 0px;"
  >
    <div
      style="position: relative; width: 500px; height: 100%; overflow: hidden; pointer-events: auto;"
    >
      <div
        style="margin: 0px; padding: 0px; position: absolute; height: 100%; top: 0px; left: 0px; display: flex;"
      >
        <div>
          0
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; height: 100%; top: 0px; left: 100px; display: flex;"
      >
        <div>
          1
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; height: 100%; top: 0px; left: 200px; display: flex;"
      >
        <div>
          2
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; height: 100%; top: 0px; left: 300px; display: flex;"
      >
        <div>
          3
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; height: 100%; top: 0px; left: 400px; display: flex;"
      >
        <div>
          4
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`horizontal should render 100 children 1`] = `
<DocumentFragment>
  <div
    style="overflow: auto hidden; contain: strict; width: 100%; height: 100%; padding: 0px; margin: 0px;"
  >
    <div
      style="position: relative; width: 4360px; height: 100%; overflow: hidden; pointer-events: auto;"
    >
      <div
        style="margin: 0px; padding: 0px; position: absolute; height: 100%; top: 0px; left: 0px; display: flex;"
      >
        <div>
          0
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; height: 100%; top: 0px; left: 100px; display: flex;"
      >
        <div>
          1
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; height: 100%; top: 0px; left: 200px; display: flex;"
      >
        <div>
          2
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; height: 100%; top: 0px; left: 300px; display: flex;"
      >
        <div>
          3
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; height: 100%; top: 0px; left: 400px; display: flex;"
      >
        <div>
          4
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; height: 100%; top: 0px; left: 500px; display: flex;"
      >
        <div>
          5
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`horizontal should render 1000 children 1`] = `
<DocumentFragment>
  <div
    style="overflow: auto hidden; contain: strict; width: 100%; height: 100%; padding: 0px; margin: 0px;"
  >
    <div
      style="position: relative; width: 40360px; height: 100%; overflow: hidden; pointer-events: auto;"
    >
      <div
        style="margin: 0px; padding: 0px; position: absolute; height: 100%; top: 0px; left: 0px; display: flex;"
      >
        <div>
          0
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; height: 100%; top: 0px; left: 100px; display: flex;"
      >
        <div>
          1
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; height: 100%; top: 0px; left: 200px; display: flex;"
      >
        <div>
          2
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; height: 100%; top: 0px; left: 300px; display: flex;"
      >
        <div>
          3
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; height: 100%; top: 0px; left: 400px; display: flex;"
      >
        <div>
          4
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; height: 100%; top: 0px; left: 500px; display: flex;"
      >
        <div>
          5
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`horizontal should render 10000 children 1`] = `
<DocumentFragment>
  <div
    style="overflow: auto hidden; contain: strict; width: 100%; height: 100%; padding: 0px; margin: 0px;"
  >
    <div
      style="position: relative; width: 400360px; height: 100%; overflow: hidden; pointer-events: auto;"
    >
      <div
        style="margin: 0px; padding: 0px; position: absolute; height: 100%; top: 0px; left: 0px; display: flex;"
      >
        <div>
          0
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; height: 100%; top: 0px; left: 100px; display: flex;"
      >
        <div>
          1
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; height: 100%; top: 0px; left: 200px; display: flex;"
      >
        <div>
          2
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; height: 100%; top: 0px; left: 300px; display: flex;"
      >
        <div>
          3
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; height: 100%; top: 0px; left: 400px; display: flex;"
      >
        <div>
          4
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; height: 100%; top: 0px; left: 500px; display: flex;"
      >
        <div>
          5
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`horizontal should render component 1`] = `
<DocumentFragment>
  <div
    style="overflow: auto hidden; contain: strict; width: 100%; height: 100%; padding: 0px; margin: 0px;"
  >
    <div
      style="position: relative; width: 300px; height: 100%; overflow: hidden; pointer-events: auto;"
    >
      <div
        style="margin: 0px; padding: 0px; position: absolute; height: 100%; top: 0px; left: 0px; display: flex;"
      >
        <div>
          component
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; height: 100%; top: 0px; left: 100px; display: flex;"
      >
        <div>
          component
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; height: 100%; top: 0px; left: 200px; display: flex;"
      >
        <div>
          component
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`horizontal should render fragments 1`] = `
<DocumentFragment>
  <div
    style="overflow: auto hidden; contain: strict; width: 100%; height: 100%; padding: 0px; margin: 0px;"
  >
    <div
      style="position: relative; width: 200px; height: 100%; overflow: hidden; pointer-events: auto;"
    >
      <div
        style="margin: 0px; padding: 0px; position: absolute; height: 100%; top: 0px; left: 0px; display: flex;"
      >
        <div>
          fragment
        </div>
        <div>
          fragment
        </div>
        <div>
          fragment
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; height: 100%; top: 0px; left: 100px; display: flex;"
      >
        <div>
          fragment
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`horizontal should render non elements 1`] = `
<DocumentFragment>
  <div
    style="overflow: auto hidden; contain: strict; width: 100%; height: 100%; padding: 0px; margin: 0px;"
  >
    <div
      style="position: relative; width: 200px; height: 100%; overflow: hidden; pointer-events: auto;"
    >
      <div
        style="margin: 0px; padding: 0px; position: absolute; height: 100%; top: 0px; left: 0px; display: flex;"
      >
        string
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; height: 100%; top: 0px; left: 100px; display: flex;"
      >
        123
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`horizontal should render with given width / height 1`] = `
<DocumentFragment>
  <div
    style="overflow: auto hidden; contain: strict; width: 100px; height: 800px; padding: 0px; margin: 0px;"
  >
    <div
      style="position: relative; width: 500px; height: 100%; overflow: hidden; pointer-events: auto;"
    >
      <div
        style="margin: 0px; padding: 0px; position: absolute; height: 100%; top: 0px; left: 0px; display: flex;"
      >
        <div>
          0
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; height: 100%; top: 0px; left: 100px; display: flex;"
      >
        <div>
          1
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; height: 100%; top: 0px; left: 200px; display: flex;"
      >
        <div>
          2
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; height: 100%; top: 0px; left: 300px; display: flex;"
      >
        <div>
          3
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; height: 100%; top: 0px; left: 400px; display: flex;"
      >
        <div>
          4
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`vertical should render 1 children 1`] = `
<DocumentFragment>
  <div
    style="overflow: hidden auto; contain: strict; width: 100%; height: 100%; padding: 0px; margin: 0px;"
  >
    <div
      style="position: relative; width: 100%; height: 50px; overflow: hidden; pointer-events: auto;"
    >
      <div
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; left: 0px; top: 0px;"
      >
        <div>
          0
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`vertical should render 5 children 1`] = `
<DocumentFragment>
  <div
    style="overflow: hidden auto; contain: strict; width: 100%; height: 100%; padding: 0px; margin: 0px;"
  >
    <div
      style="position: relative; width: 100%; height: 250px; overflow: hidden; pointer-events: auto;"
    >
      <div
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; left: 0px; top: 0px;"
      >
        <div>
          0
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; left: 0px; top: 50px;"
      >
        <div>
          1
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; left: 0px; top: 100px;"
      >
        <div>
          2
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; left: 0px; top: 150px;"
      >
        <div>
          3
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; left: 0px; top: 200px;"
      >
        <div>
          4
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`vertical should render 100 children 1`] = `
<DocumentFragment>
  <div
    style="overflow: hidden auto; contain: strict; width: 100%; height: 100%; padding: 0px; margin: 0px;"
  >
    <div
      style="position: relative; width: 100%; height: 4060px; overflow: hidden; pointer-events: auto;"
    >
      <div
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; left: 0px; top: 0px;"
      >
        <div>
          0
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; left: 0px; top: 50px;"
      >
        <div>
          1
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; left: 0px; top: 100px;"
      >
        <div>
          2
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; left: 0px; top: 150px;"
      >
        <div>
          3
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; left: 0px; top: 200px;"
      >
        <div>
          4
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; left: 0px; top: 250px;"
      >
        <div>
          5
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`vertical should render 1000 children 1`] = `
<DocumentFragment>
  <div
    style="overflow: hidden auto; contain: strict; width: 100%; height: 100%; padding: 0px; margin: 0px;"
  >
    <div
      style="position: relative; width: 100%; height: 40060px; overflow: hidden; pointer-events: auto;"
    >
      <div
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; left: 0px; top: 0px;"
      >
        <div>
          0
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; left: 0px; top: 50px;"
      >
        <div>
          1
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; left: 0px; top: 100px;"
      >
        <div>
          2
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; left: 0px; top: 150px;"
      >
        <div>
          3
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; left: 0px; top: 200px;"
      >
        <div>
          4
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; left: 0px; top: 250px;"
      >
        <div>
          5
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`vertical should render 10000 children 1`] = `
<DocumentFragment>
  <div
    style="overflow: hidden auto; contain: strict; width: 100%; height: 100%; padding: 0px; margin: 0px;"
  >
    <div
      style="position: relative; width: 100%; height: 400060px; overflow: hidden; pointer-events: auto;"
    >
      <div
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; left: 0px; top: 0px;"
      >
        <div>
          0
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; left: 0px; top: 50px;"
      >
        <div>
          1
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; left: 0px; top: 100px;"
      >
        <div>
          2
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; left: 0px; top: 150px;"
      >
        <div>
          3
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; left: 0px; top: 200px;"
      >
        <div>
          4
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; left: 0px; top: 250px;"
      >
        <div>
          5
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`vertical should render component 1`] = `
<DocumentFragment>
  <div
    style="overflow: hidden auto; contain: strict; width: 100%; height: 100%; padding: 0px; margin: 0px;"
  >
    <div
      style="position: relative; width: 100%; height: 150px; overflow: hidden; pointer-events: auto;"
    >
      <div
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; left: 0px; top: 0px;"
      >
        <div>
          component
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; left: 0px; top: 50px;"
      >
        <div>
          component
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; left: 0px; top: 100px;"
      >
        <div>
          component
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`vertical should render fragments 1`] = `
<DocumentFragment>
  <div
    style="overflow: hidden auto; contain: strict; width: 100%; height: 100%; padding: 0px; margin: 0px;"
  >
    <div
      style="position: relative; width: 100%; height: 100px; overflow: hidden; pointer-events: auto;"
    >
      <div
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; left: 0px; top: 0px;"
      >
        <div>
          fragment
        </div>
        <div>
          fragment
        </div>
        <div>
          fragment
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; left: 0px; top: 50px;"
      >
        <div>
          fragment
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`vertical should render non elements 1`] = `
<DocumentFragment>
  <div
    style="overflow: hidden auto; contain: strict; width: 100%; height: 100%; padding: 0px; margin: 0px;"
  >
    <div
      style="position: relative; width: 100%; height: 100px; overflow: hidden; pointer-events: auto;"
    >
      <div
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; left: 0px; top: 0px;"
      >
        string
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; left: 0px; top: 50px;"
      >
        123
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`vertical should render with given width / height 1`] = `
<DocumentFragment>
  <div
    style="overflow: hidden auto; contain: strict; width: 100px; height: 800px; padding: 0px; margin: 0px;"
  >
    <div
      style="position: relative; width: 100%; height: 250px; overflow: hidden; pointer-events: auto;"
    >
      <div
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; left: 0px; top: 0px;"
      >
        <div>
          0
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; left: 0px; top: 50px;"
      >
        <div>
          1
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; left: 0px; top: 100px;"
      >
        <div>
          2
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; left: 0px; top: 150px;"
      >
        <div>
          3
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; left: 0px; top: 200px;"
      >
        <div>
          4
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
